solve overflow issue on sidebar

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -24,6 +24,8 @@
   &__option-wrapper {
     width: 25%;
     @include flex-wrap;
+    overflow: visible;
+
     @include tablet-breakpoint {
       width: 100%;
       flex-wrap: nowrap;
